--- a/view/component/footer.html
+++ b/view/component/footer.html
@@ -3,7 +3,7 @@
     <div
       class="col-xl-4 col-lg-4 col-sm-6 d-flex gap-3 flex-column text-border-color"
     >
-      <img src="uploads/logo.png" alt="" class="logo" />
+      <img src="uploads/logoo.png" alt="" class="logo" />
       <span
         >Carrot is the biggest market of grocery products. Get your daily needs
         from our store.</span
@@ -113,7 +113,11 @@
           <div
             class="item cursor mx-1 position-relative slide-img-list overflow-hidden rounded-2"
           >
-            <img src="uploads/overlay1.jpg" alt="" class="img-cover" />
+            <img
+              src="../../uploads/technology/blog/blog-posts-3-scaled-e1695291811949-370x370.jpg"
+              alt=""
+              class="img-cover"
+            />
             <div
               class="img-overlay bg-dark bg-opacity-50 w-100 h-100 d-flex align-items-center justify-content-center position-absolute top-50 start-50 translate-middle"
             >
@@ -126,7 +130,11 @@
           <div
             class="item cursor mx-1 position-relative slide-img-list overflow-hidden rounded-2"
           >
-            <img src="uploads/overlay2.jpg" alt="" class="img-cover" />
+            <img
+              src="../../uploads/technology/blog/blog-posts-6-scaled-e1695291924884-370x370.jpg"
+              alt=""
+              class="img-cover"
+            />
             <div
               class="img-overlay bg-dark bg-opacity-50 w-100 h-100 d-flex align-items-center justify-content-center position-absolute top-50 start-50 translate-middle"
             >
@@ -139,7 +147,11 @@
           <div
             class="item cursor mx-1 position-relative slide-img-list overflow-hidden rounded-2"
           >
-            <img src="uploads/overlay3.jpg" alt="" class="img-cover" />
+            <img
+              src="../../uploads/technology/blog/bg-phone.png"
+              alt=""
+              class="img-cover"
+            />
             <div
               class="img-overlay bg-dark bg-opacity-50 w-100 h-100 d-flex align-items-center justify-content-center position-absolute top-50 start-50 translate-middle"
             >
@@ -152,7 +164,20 @@
           <div
             class="item cursor mx-1 position-relative slide-img-list overflow-hidden rounded-2"
           >
-            <img src="uploads/overlay4.jpg" alt="" class="img-cover" />
+            <img
+              src="../../uploads/technology/blog/bg-keyboard.png"
+              alt=""
+              class="img-cover"
+            />
+          </div>
+          <div
+            class="item cursor mx-1 position-relative slide-img-list overflow-hidden rounded-2"
+          >
+            <img
+              src="../../uploads/technology/blog/blog-posts-3-scaled-e1695291811949-370x370.jpg"
+              alt=""
+              class="img-cover"
+            />
             <div
               class="img-overlay bg-dark bg-opacity-50 w-100 h-100 d-flex align-items-center justify-content-center position-absolute top-50 start-50 translate-middle"
             >
@@ -165,7 +190,11 @@
           <div
             class="item cursor mx-1 position-relative slide-img-list overflow-hidden rounded-2"
           >
-            <img src="uploads/overlay1.jpg" alt="" class="img-cover" />
+            <img
+              src="../../uploads/technology/blog/blog-posts-6-scaled-e1695291924884-370x370.jpg"
+              alt=""
+              class="img-cover"
+            />
             <div
               class="img-overlay bg-dark bg-opacity-50 w-100 h-100 d-flex align-items-center justify-content-center position-absolute top-50 start-50 translate-middle"
             >
@@ -178,7 +207,11 @@
           <div
             class="item cursor mx-1 position-relative slide-img-list overflow-hidden rounded-2"
           >
-            <img src="uploads/overlay2.jpg" alt="" class="img-cover" />
+            <img
+              src="../../uploads/technology/blog/bg-phone.png"
+              alt=""
+              class="img-cover"
+            />
             <div
               class="img-overlay bg-dark bg-opacity-50 w-100 h-100 d-flex align-items-center justify-content-center position-absolute top-50 start-50 translate-middle"
             >
@@ -191,62 +224,45 @@
           <div
             class="item cursor mx-1 position-relative slide-img-list overflow-hidden rounded-2"
           >
-            <img src="uploads/overlay3.jpg" alt="" class="img-cover" />
-            <div
-              class="img-overlay bg-dark bg-opacity-50 w-100 h-100 d-flex align-items-center justify-content-center position-absolute top-50 start-50 translate-middle"
-            >
-              <ion-icon
-                class="fs-4 text-third"
-                name="logo-instagram"
-              ></ion-icon>
-            </div>
-          </div>
-          <div
-            class="item cursor mx-1 position-relative slide-img-list overflow-hidden rounded-2"
-          >
-            <img src="uploads/overlay4.jpg" alt="" class="img-cover" />
-            <div
-              class="img-overlay bg-dark bg-opacity-50 w-100 h-100 d-flex align-items-center justify-content-center position-absolute top-50 start-50 translate-middle"
-            >
-              <ion-icon
-                class="fs-4 text-third"
-                name="logo-instagram"
-              ></ion-icon>
-            </div>
+            <img
+              src="../../uploads/technology/blog/bg-keyboard.png"
+              alt=""
+              class="img-cover"
+            />
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<div class="container footer-info py-3 text-center">
-  <h3 class="fs-6 fw-normal">
-    @2024 <span class="text-primary">Carrot</span>, All rights reserved.
-  </h3>
-</div>
-<script>
-  $(document).ready(function () {
-    $("#slide-img-footer").owlCarousel({
-      autoPlay: 5000, //Set AutoPlay to 3 seconds
-      pagination: false, // ẩn nút next prev
-      items: 4,
-      // itemsDesktop: [1199, 3],
-      // itemsDesktopSmall: [979, 3],
-      responsive: {
-        0: {
-          items: 1,
-          nav: true,
+  <div class="container footer-info py-3 text-center">
+    <h3 class="fs-6 fw-normal">
+      @2024 <span class="text-primary">Carrot</span>, All rights reserved.
+    </h3>
+  </div>
+  <script>
+    $(document).ready(function () {
+      $("#slide-img-footer").owlCarousel({
+        autoPlay: 5000, //Set AutoPlay to 3 seconds
+        pagination: false, // ẩn nút next prev
+        items: 4,
+        // itemsDesktop: [1199, 3],
+        // itemsDesktopSmall: [979, 3],
+        responsive: {
+          0: {
+            items: 1,
+            nav: true,
+          },
+          600: {
+            items: 3,
+            nav: false,
+          },
+          1000: {
+            items: 4,
+            nav: true,
+            loop: false,
+          },
         },
-        600: {
-          items: 3,
-          nav: false,
-        },
-        1000: {
-          items: 4,
-          nav: true,
-          loop: false,
-        },
-      },
+      });
     });
-  });
-</script>
+  </script>
+</div>
