--- a/view/demo.html
+++ b/view/demo.html
@@ -341,7 +341,7 @@
     </style>
   </head>
   <body>
-    <button class="truck-button">
+    <!-- <button class="truck-button">
       <span class="default">Complete Order</span>
       <span class="success">
         Order Placed
@@ -362,7 +362,8 @@
         href="http://www.devanswer.com"
         >Developers Answer</a
       >
-    </div>
+    </div> -->
+    
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script>
       document.querySelectorAll(".truck-button").forEach((button) => {
@@ -501,3 +502,7 @@
      // $cookies.putObject("bill", $scope.bill);
             // sessionStorage.setItem("bill", JSON.stringify($scope.bill));
             $scope.currentUser = JSON.parse(sessionStorage.getItem("currentUser"));
+
+
+
+            
