--- a/view/login.html
+++ b/view/login.html
@@ -91,6 +91,7 @@
             <div class="row g-3 mt-2">
               <div class="col-sm-12">
                 <button
+                  id="loginGoogle"
                   class="d-flex justify-content-center w-100 align-items-center gap-2 fw-medium border p-2 border-secondary rounded-2"
                 >
                   <img src="uploads/gg.png" alt="" width="20" /> Sign in with
@@ -113,3 +114,67 @@
     </div>
   </div>
 </section>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-app.js";
+  import {
+    getAuth,
+    signInWithPopup,
+    GoogleAuthProvider,
+  } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-auth.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyCU1dx90TEWVIgwkHEXhmszCXILrcd8n5w",
+    authDomain: "angular-js-c8665.firebaseapp.com",
+    databaseURL: "https://angular-js-c8665-default-rtdb.firebaseio.com",
+    projectId: "angular-js-c8665",
+    storageBucket: "angular-js-c8665.appspot.com",
+    messagingSenderId: "321232847590",
+    appId: "1:321232847590:web:cca6b41461b1d2a39e7127",
+    measurementId: "G-HZJ0QGSN5F",
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  // console.log(app);
+  // const db = getDatabase(app);
+  /// Xử lí success
+  function success() {
+    swal({
+      title: "Good job!",
+      text: "You clicked the button!",
+      icon: "success",
+      button: "Aww yiss!",
+    }).then((value) => {
+      window.location.href = "/";
+    });
+  }
+  // xử lí đăng nhập bằng gg
+  const loginWithGoogle = async () => {
+    const provider = new GoogleAuthProvider();
+    try {
+      const result = await signInWithPopup(auth, provider);
+      const user = result.user;
+      console.log(user);
+      sessionStorage.setItem("user-google", JSON.stringify(user));
+      sessionStorage.removeItem("currentUser");
+      success();
+    } catch (error) {
+      const errorMessage = error.message;
+      swal({
+        title: "Tài khoản sai",
+        text: errorMessage,
+        icon: "error",
+        button: "Quay lại",
+      });
+    }
+  };
+  document
+    .getElementById("loginGoogle")
+    .addEventListener("click", loginWithGoogle);
+</script>
